force-app/main/default/objects/Contact/fields/AccountIndustryMC__c.field-meta.xml
<CustomField>
    <fullName>AccountIndustryMC__c</fullName>
    <description>Getting details from Customers tab and used for syncing with MailChimp</description>
    <formula>TEXT(Account.Industry)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountIndustryMC</label>
    <type>Text</type>
</CustomField>