force-app/main/default/objects/Contact/fields/AccountNameMC__c.field-meta.xml
<CustomField>
    <fullName>AccountNameMC__c</fullName>
    <description>Getting details from Customers tab and used for syncing with MailChimp</description>
    <formula>Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountNameMC</label>
    <type>Text</type>
</CustomField>