force-app/main/default/objects/Contact/fields/AccountStateMC__c.field-meta.xml
<CustomField>
    <fullName>AccountStateMC__c</fullName>
    <description>Getting details from Customers tab and used for syncing with MailChimp</description>
    <formula>TEXT(Account.BillingStateCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountStateMC</label>
    <type>Text</type>
</CustomField>