force-app/main/default/objects/Contact/fields/Copy_Address_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Copy_Address_From_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy Address From Account</label>
    <type>Checkbox</type>
</CustomField>