force-app/main/default/objects/Contact/validationRules/Mailing_state_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Mailing_state_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>MailingCountry = &quot;Australia&quot; &amp;&amp; MailingState = &quot;&quot;</errorConditionFormula>
    <errorMessage>please enter state</errorMessage>
</ValidationRule>